--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "js/app.js",
   "dependencies": {
     "flux": "^2.0.1",
+    "font-awesome": "^4.3.0",
     "object-assign": "^1.0.0",
     "react": "^0.12.0"
   },
