--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "repository": "https://github.com/antivanov/Flock",
   "main": "js/app.js",
   "dependencies": {
+    "es6-promise": "^2.0.1",
+    "express": "^4.12.1",
     "flux": "^2.0.1",
     "font-awesome": "^4.3.0",
+    "jquery": "^2.1.3",
+    "mongodb": "^1.4.32",
     "object-assign": "^1.0.0",
     "react": "^0.12.0"
   },
