--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   },
   "devDependencies": {
     "browserify": "^6.2.0",
+    "del": "^1.1.1",
     "envify": "^3.0.0",
+    "gulp": "^3.8.11",
+    "gulp-less": "^3.0.1",
     "jest-cli": "~0.1.17",
+    "less": "^2.4.0",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15"
   },
   "scripts": {
-    "build": "browserify . > build/client/bundle.js",
     "test": "jest"
   },
   "author": "Anton Ivanov",
