--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "envify": "^3.0.0",
     "gulp": "^3.8.11",
     "gulp-less": "^3.0.1",
+    "gulp-minify-css": "^0.5.1",
     "jest-cli": "~0.1.17",
     "less": "^2.4.0",
     "reactify": "^0.15.2",
