--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "del": "^1.1.1",
     "envify": "^3.0.0",
     "gulp": "^3.8.11",
+    "gulp-jshint": "^1.9.2",
     "gulp-less": "^3.0.1",
     "gulp-minify-css": "^0.5.1",
     "jest-cli": "~0.1.17",
