--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gulp-less": "^3.0.1",
     "gulp-minify-css": "^0.5.1",
     "gulp-rename": "^1.2.0",
+    "gulp-shell": "^0.4.0",
     "jest-cli": "~0.1.17",
     "less": "^2.4.0",
+    "react-tools": "^0.13.0",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15"
   },
@@ -39,6 +41,10 @@
     ]
   },
   "jest": {
-    "rootDir": "./js"
+    "rootDir": "./js",
+    "scriptPreprocessor": "../test.preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
   }
 }
