--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "gulp-less": "^3.0.1",
     "gulp-minify-css": "^0.5.1",
     "gulp-rename": "^1.2.0",
+    "gulp-sequence": "^0.3.2",
     "gulp-shell": "^0.4.0",
     "jest-cli": "~0.1.17",
     "less": "^2.4.0",
+    "react-router": "^0.12.4",
     "react-tools": "^0.13.0",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15"
   },
   "scripts": {
+    "build": "browserify js/app.js > build/dev/client/bundle.js",
     "test": "jest"
   },
   "author": "Anton Ivanov",
@@ -44,7 +47,8 @@
     "rootDir": "./js",
     "scriptPreprocessor": "../test.preprocessor.js",
     "unmockedModulePathPatterns": [
-      "react"
+      "react",
+      "react-router"
     ]
   }
 }
