--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/antivanov/Flock",
   "main": "js/app.js",
   "dependencies": {
+    "body-parser": "^1.12.2",
     "es6-promise": "^2.0.1",
     "express": "^4.12.1",
     "flux": "^2.0.1",
