Adds tests for the UUID generator.

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     ]
   },
   "jest": {
-    "rootDir": "./js",
-    "scriptPreprocessor": "../test.preprocessor.js",
+    "rootDir": ".",
+    "scriptPreprocessor": "test.preprocessor.js",
     "unmockedModulePathPatterns": [
       "react",
       "react-router"
